# ColdCallingAgent

./: .gitignore
coldcall-api/: README.md  alembic.ini  main.py  pyproject.toml
coldcall-api/core/: config.py  logging.py  responses.py
coldcall-api/dependencies/: auth.py  database.py  pagination.py
coldcall-api/migrations/: env.py
coldcall-api/migrations/versions/: 0001_initial.py
coldcall-api/models/: __init__.py  base.py  entities.py
coldcall-api/routers/: __init__.py  auth.py  calls.py  campaigns.py  crm.py  emails.py  followups.py  health.py  linkedin.py  meetings.py  prospects.py  reports.py  scripts.py  triggers.py
coldcall-api/schemas/: async_jobs.py  auth.py  call_objections.py  call_scripts.py  calls.py  campaigns.py  common.py  companies.py  contacts.py  crm_connections.py  emails.py  follow_up_sequences.py  linkedin_messages.py  meetings.py  prospects.py  re_engagement_triggers.py  touchpoint_log.py  users.py
coldcall-api/scripts/: seed_demo.py
coldcall-api/services/: __init__.py  auth_service.py  base_service.py  calls_service.py  campaigns_service.py  crm_service.py  emails_service.py  followups_service.py  jobs_service.py  linkedin_service.py  meetings_service.py  prospects_service.py  reports_service.py  scripts_service.py  triggers_service.py
coldcall-ui/: package-lock.json  package.json  proxy.ts  tailwind.config.ts
coldcall-ui/app/: globals.css  layout.tsx  page.tsx
coldcall-ui/context/: AppProviders.tsx  AuthContext.tsx
coldcall-ui/hooks/: use-auth.ts  use-calls.ts  use-campaigns.ts  use-crm.ts  use-emails.ts  use-followups.ts  (+6 more)
(+55 files in other folders)
